package com.longdev.xiaoling.model

enum class AppThemeMode(val label: String) {
    LIGHT("亮色"),
    DARK("深色"),
    SYSTEM("自动"),
}
